--- a/package.json
+++ b/package.json
@@ -17,14 +17,11 @@
         "format:check": "prettier --check \"**/*.{ts,json,md}\""
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.1.0",
-        "@typescript-eslint/parser": "^7.1.0",
-        "eslint": "^9.0.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
+        "@antfu/eslint-config": "3.14.0",
+        "@eslint-react/eslint-plugin": "^1.23.2",
+        "eslint": "^9.10.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
-        "prettier": "^3.2.5",
         "typescript": "5.8.2"
     },
     "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
