Refactor core package to integrate Rolldown for build processes, update TypeScript configuration, and enhance export functions for filtering, pagination, and sorting. Remove deprecated configurations and streamline package.json scripts. Add new rolldown configuration for improved output management.

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -12,6 +12,7 @@
     // Ensure a correct output
     "baseUrl": ".",
     "rootDir": "src",
+    "outDir": "dist",
 
     // Ensure declarations and sourcemaps are generated
     "declaration": true,
@@ -35,5 +36,5 @@
     "noEmitOnError": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
 }
