--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,9 +25,6 @@
     "swagger",
     "typescript"
   ],
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/cjs/index.d.ts",
   "exports": {
     "./client": {
       "import": "./dist/esm/client.js",
@@ -44,9 +41,7 @@
     "/dist"
   ],
   "scripts": {
-    "build": "pnpm build:esm && pnpm build:cjs",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build": "rolldown -c rolldown.config.ts",
     "dev": "tsc --watch -p tsconfig.esm.json",
     "test": "vitest run",
     "test:watch": "vitest watch",
@@ -59,7 +54,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/swagger": "^11.0.1",
     "nestjs-zod": "^4.3.1",
-    "rxjs": "^7.8.2",
+    "rxjs": "7.8.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -69,6 +64,8 @@
     "@types/node": "^20.17.24",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.1",
+    "rolldown": "1.0.0-beta.24",
+    "rolldown-plugin-dts": "0.13.13",
     "supertest": "^7.0.0",
     "typescript": "5.4.2",
     "vitest": "^1.6.1"
