--- a/examples/nest-basic/package.json
+++ b/examples/nest-basic/package.json
@@ -20,7 +20,8 @@
     "@nestjs/swagger": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "zod": "^3.24.2"
+    "zod": "^4.1.0",
+    "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
