--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,13 +54,13 @@
     "prepublishOnly": "pnpm build && pnpm test"
   },
   "dependencies": {
-    "@anatine/zod-openapi": "^2.2.7",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/swagger": "^11.0.1",
     "nestjs-zod": "^4.3.1",
     "rxjs": "^7.8.2",
-    "zod": "^3.24.2"
+    "zod": "^4.1.0",
+    "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
     "@nestjs/platform-express": "^11.0.1",
