--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -27,7 +27,7 @@
     "forceConsistentCasingInFileNames": true,
 
     // Other options
-    "removeComments": true,
+    "removeComments": false,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
 
