--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "lonestone-nzoth",
     "description": "A collection of NestJS utilities for building RESTful APIs with support for filtering, pagination, sorting, type-safe request/response validation, and OpenAPI schema registration using Zod. Allows registering Zod schemas with OpenAPI metadata for automatic documentation generation.",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "private": true,
     "scripts": {
         "build": "pnpm -r build",
         "dev": "pnpm --parallel dev",
         "test": "pnpm -r test",
-        "version:patch": "pnpm version patch -r",
-        "version:minor": "pnpm version minor -r",
-        "version:major": "pnpm version major -r",
+        "version:patch": "pnpm version patch",
+        "version:minor": "pnpm version minor",
+        "version:major": "pnpm version major",
         "postinstall": "husky install",
         "lint": "eslint \"**/*.ts\"",
         "lint:fix": "eslint \"**/*.ts\" --fix",
