--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@lonestone/nzoth",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": false,
+  "packageManager": "pnpm@9.15.0",
   "description": "NZOTH: Nest + Zod + OpenAPI + Typed + Helpers - Build fully type-safe REST APIs with NestJS",
   "author": "Lonestone",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lonestone/nzoth.git"
@@ -11,7 +13,6 @@
   "bugs": {
     "url": "https://github.com/lonestone/nzoth/issues"
   },
-  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
@@ -25,24 +26,27 @@
     "swagger",
     "typescript"
   ],
+  "exports": {
+    "./client": {
+      "types": "./dist/cjs/client.d.ts",
+      "import": "./dist/esm/client.js",
+      "require": "./dist/cjs/client.js"
+    },
+    "./server": {
+      "types": "./dist/cjs/server.d.ts",
+      "import": "./dist/esm/server.js",
+      "require": "./dist/cjs/server.js"
+    }
+  },
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
-  "exports": {
-    "./client": {
-      "import": "./dist/esm/client.js",
-      "require": "./dist/cjs/client.js",
-      "types": "./dist/cjs/client.d.ts"
-    },
-    "./server": {
-      "import": "./dist/esm/server.js",
-      "require": "./dist/cjs/server.js",
-      "types": "./dist/cjs/server.d.ts"
-    }
-  },
   "files": [
     "/dist"
   ],
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "pnpm build:esm && pnpm build:cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
@@ -57,7 +61,6 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/swagger": "^11.0.1",
-    "nestjs-zod": "^4.3.1",
     "rxjs": "^7.8.2",
     "zod": "^4.1.0",
     "zod-openapi": "^5.3.1"
@@ -72,9 +75,5 @@
     "supertest": "^7.0.0",
     "typescript": "5.4.2",
     "vitest": "^1.6.1"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "packageManager": "pnpm@9.15.0"
+  }
 }
