--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-    "name": "lonestone-nzoth",
-    "description": "A collection of NestJS utilities for building RESTful APIs with support for filtering, pagination, sorting, type-safe request/response validation, and OpenAPI schema registration using Zod. Allows registering Zod schemas with OpenAPI metadata for automatic documentation generation.",
-    "version": "1.1.3",
-    "private": true,
-    "scripts": {
-        "build": "pnpm -r build",
-        "dev": "pnpm --parallel dev",
-        "test": "pnpm -r test",
-        "version:patch": "pnpm version patch",
-        "version:minor": "pnpm version minor",
-        "version:major": "pnpm version major",
-        "postinstall": "husky install",
-        "lint": "eslint \"**/*.ts\"",
-        "lint:fix": "eslint \"**/*.ts\" --fix",
-        "format": "prettier --write \"**/*.{ts,json,md}\"",
-        "format:check": "prettier --check \"**/*.{ts,json,md}\""
-    },
-    "devDependencies": {
-        "@antfu/eslint-config": "3.14.0",
-        "@eslint-react/eslint-plugin": "^1.23.2",
-        "eslint": "^9.10.0",
-        "husky": "^9.0.11",
-        "lint-staged": "^15.2.2",
-        "typescript": "5.8.2"
-    },
-    "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
+  "name": "lonestone-nzoth",
+  "version": "1.1.4",
+  "private": true,
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+  "description": "A collection of NestJS utilities for building RESTful APIs with support for filtering, pagination, sorting, type-safe request/response validation, and OpenAPI schema registration using Zod. Allows registering Zod schemas with OpenAPI metadata for automatic documentation generation.",
+  "scripts": {
+    "build": "pnpm -r build",
+    "dev": "pnpm --parallel dev",
+    "test": "pnpm -r test",
+    "version:patch": "pnpm version patch",
+    "version:minor": "pnpm version minor",
+    "version:major": "pnpm version major",
+    "postinstall": "husky install",
+    "lint": "eslint \"**/*.ts\"",
+    "lint:fix": "eslint \"**/*.ts\" --fix",
+    "format": "prettier --write \"**/*.{ts,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,json,md}\""
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "3.14.0",
+    "@eslint-react/eslint-plugin": "^1.23.2",
+    "eslint": "^9.10.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "typescript": "5.8.2"
+  }
 }
