--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lonestone/nzoth",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": false,
   "packageManager": "pnpm@9.15.0",
   "description": "NZOTH: Nest + Zod + OpenAPI + Typed + Helpers - Build fully type-safe REST APIs with NestJS",
@@ -62,8 +62,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/swagger": "^11.0.1",
     "rxjs": "^7.8.2",
-    "zod": "^4.1.0",
-    "zod-openapi": "^5.4.4"
+    "zod": "4.1.13",
+    "zod-openapi": "^5.4.5"
   },
   "devDependencies": {
     "@nestjs/platform-express": "^11.0.1",
