--- a/examples/nest-basic/package.json
+++ b/examples/nest-basic/package.json
@@ -19,16 +19,16 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "zod": "4.1.13",
+    "rxjs": "^7.8.2",
+    "zod": "^4.0.0",
     "zod-openapi": "^5.4.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@faker-js/faker": "9.6.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/cli": "^11.0.1",
+    "@nestjs/schematics": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.8",
     "@types/express": "^5.0.0",
