--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,23 +57,27 @@
     "test:coverage": "vitest run --coverage",
     "prepublishOnly": "pnpm build && pnpm test"
   },
-  "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/swagger": "^11.0.1",
+  "peerDependencies": {
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/swagger": "^11.0.0",
     "rxjs": "^7.8.2",
-    "zod": "4.1.13",
+    "zod": "^4.0.0",
     "zod-openapi": "^5.4.5"
   },
   "devDependencies": {
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/testing": "^11.0.1",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/swagger": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.17.24",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.1",
     "supertest": "^7.0.0",
     "typescript": "5.4.2",
-    "vitest": "^1.6.1"
+    "vitest": "^1.6.1",
+    "zod": "^4.0.0"
   }
 }
